Audio-ALSA: Remove unused scripts and sample files
Remove unused scripts, ALSA library files and sample files
as they won't be required anymore after testcases restructure.

Signed-off-by: Misael Lopez Cruz <misael.lopez@ti.com>

--- a/audio-alsa/test_code/Makefile
+++ b/audio-alsa/test_code/Makefile
@@ -18,27 +18,15 @@
 # Change Log:
 ############################################################################
 
-ifeq ($(SUITE_DIR),)
-SUITE_DIR:=$(PWD)
-endif
+OBJS := install
 
-DESTDIR := $(SUITE_DIR)/bin
-OBJS := utilities install
-
-all: $(OBJS)
-
-utilities:
-	$(MAKE) -C utils
+all:$(OBJS)
 
 install:
-	mkdir -p $(DESTDIR)
-	$(MAKE) -C utils install
 	mkdir -p scripts/test
 	mkdir -p scripts/tmp
 
 clean:
-	rm -rvf $(DESTDIR)
-	$(MAKE) -C utils clean
 	rm -rf scripts/log*
 	rm -rf scripts/tmp
 	rm -rf scripts/test
